[project]
name = "dbviz"
version = "0.1.3"
description = "Decision Boundary Visualization for PyTorch Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "torch>=2.6.0",
    "torchvision>=0.24.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
